[package]
name = "opforge"
version = "0.9.3"
edition = "2021"
license = "GPL-3.0-or-later"
authors = ["Erik van der Tier"]
repository = "https://github.com/pig-games/opForge"

[[bin]]
name = "opforge-lsp"
path = "src/bin/opforge_lsp.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
proptest = "1"

[features]
default = []
# Enables loading/writing VM runtime package bytes as an on-disk artifact
# (`target/vm/opforge-vm-runtime.opcpu`) with registry-build fallback.
vm-runtime-opcpu-artifact = []
# Enables additional parity-focused VM test lanes and checks.
vm-parity = []

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
